14.3/k8s/99_netpolicy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: all-deny
  namespace: app
spec:
  podSelector: {}
  policyTypes:
    - Ingress 

---

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: front2back
  namespace: app
spec:
  podSelector: 
    matchLabels:
      app: backend
  policyTypes:
    - Ingress 
  ingress:
    - from:
      - podSelector:
          matchLabels:
            app: frontend
      ports:
        - protocol: TCP
          port: 80

---

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: back2cache
  namespace: app
spec:
  podSelector: 
    matchLabels:
      app: cache
  policyTypes:
    - Ingress 
  ingress:
    - from:
      - podSelector:
          matchLabels:
            app: backend
      ports:
        - protocol: TCP
          port: 80
